[gd_scene load_steps=37 format=3 uid="uid://jj53cenwludu"]

[ext_resource type="Script" path="res://Enemies/Ghost/ghost.gd" id="1_t2ber"]
[ext_resource type="Script" path="res://Enemies/Ghost/Movement/movement.gd" id="2_e7v7t"]
[ext_resource type="Texture2D" uid="uid://yaao46wfc6ej" path="res://Enemies/Assets/ghost.png" id="2_w0xbk"]
[ext_resource type="Script" path="res://Engines/Health/health.gd" id="3_maugh"]
[ext_resource type="Texture2D" uid="uid://bvdbo2n14i5aj" path="res://Enemies/Assets/ghost-death.png" id="3_p3eig"]
[ext_resource type="Script" path="res://Engines/Hitbox/hitbox.gd" id="4_ei0m8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wy2y6"]
size = Vector2(13, 7.5)

[sub_resource type="Animation" id="Animation_78qb3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_rw0rs"]
resource_name = "attack_down"
length = 0.82
step = 0.82
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36, 37, 38, 39, 40, 41]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.82),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_attacking"
}]
}

[sub_resource type="Animation" id="Animation_35yi0"]
resource_name = "attack_left"
length = 0.82
step = 0.82
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.82),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_attacking"
}]
}

[sub_resource type="Animation" id="Animation_lfpq4"]
resource_name = "attack_right"
length = 0.82
step = 0.82
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 24, 25, 26, 27]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.82),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_attacking"
}]
}

[sub_resource type="Animation" id="Animation_i3muv"]
resource_name = "attack_up"
length = 0.82
step = 0.82
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [47, 48, 49, 50, 51, 52, 53, 54, 55]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.82),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_attacking"
}]
}

[sub_resource type="Animation" id="Animation_xx5c4"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/DeathSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_qkjou"]
resource_name = "move_down"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_1nmar"]
resource_name = "move_left"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_26ibb"]
resource_name = "move_right"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_6qi00"]
resource_name = "move_up"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h68lo"]
_data = {
"RESET": SubResource("Animation_78qb3"),
"attack_down": SubResource("Animation_rw0rs"),
"attack_left": SubResource("Animation_35yi0"),
"attack_right": SubResource("Animation_lfpq4"),
"attack_up": SubResource("Animation_i3muv"),
"death": SubResource("Animation_xx5c4"),
"move_down": SubResource("Animation_qkjou"),
"move_left": SubResource("Animation_1nmar"),
"move_right": SubResource("Animation_26ibb"),
"move_up": SubResource("Animation_6qi00")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lq6ry"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qjpb3"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dufkj"]
animation = &"attack_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ndjrg"]
animation = &"attack_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5swfq"]
blend_point_0/node = SubResource("AnimationNodeAnimation_lq6ry")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_qjpb3")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_dufkj")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ndjrg")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uooo6"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x77rg"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4gbt5"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u2j6o"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cblps"]
animation = &"move_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4s806"]
blend_point_0/node = SubResource("AnimationNodeAnimation_x77rg")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_4gbt5")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_u2j6o")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_cblps")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tlukk"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jrtyq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wt25t"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fapli"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x4fx3"]
priority = 0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ma8qi"]
states/End/position = Vector2(901, 100)
states/attack/node = SubResource("AnimationNodeBlendSpace2D_5swfq")
states/attack/position = Vector2(352, 200)
states/death/node = SubResource("AnimationNodeAnimation_uooo6")
states/death/position = Vector2(514, 100)
states/move/node = SubResource("AnimationNodeBlendSpace2D_4s806")
states/move/position = Vector2(352, 100)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_tlukk"), "move", "attack", SubResource("AnimationNodeStateMachineTransition_jrtyq"), "attack", "move", SubResource("AnimationNodeStateMachineTransition_wt25t"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_fapli"), "move", "death", SubResource("AnimationNodeStateMachineTransition_x4fx3")]
graph_offset = Vector2(-331, -96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47wh5"]
size = Vector2(18, 22)

[node name="ghost" type="CharacterBody2D"]
modulate = Color(1.2, 1.2, 1.2, 1)
scale = Vector2(3, 3)
script = ExtResource("1_t2ber")

[node name="Movement" type="Node2D" parent="."]
script = ExtResource("2_e7v7t")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -4)
shape = SubResource("RectangleShape2D_wy2y6")
disabled = true

[node name="Sprites" type="Node2D" parent="."]

[node name="GhostSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(0, -11)
texture = ExtResource("2_w0xbk")
hframes = 14
vframes = 4
frame = 5

[node name="DeathSprite" type="Sprite2D" parent="Sprites"]
visible = false
modulate = Color(2, 2, 2, 1)
position = Vector2(0, -8)
texture = ExtResource("3_p3eig")
hframes = 5
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h68lo")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ma8qi")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/blend_position = Vector2(-1.00113, 0.00938082)
parameters/move/blend_position = Vector2(0.0079186, 0.299663)

[node name="HealthEngine" type="Node2D" parent="."]
script = ExtResource("3_maugh")
health = 30.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("4_ei0m8")
damage = 20.0

[node name="CollisionShape" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_47wh5")

[connection signal="is_dead" from="HealthEngine" to="." method="_on_health_engine_is_dead"]
